--- a/src/CSS/Dashboard.css
+++ b/src/CSS/Dashboard.css
@@ -580,3 +580,34 @@
    }
 
    /*end the pop up of the total offered courses */
+
+   .batch-active {
+   	display: none;
+   	position: fixed;
+   	top: 50%;
+   	left: 50%;
+   	transform: translate(-50%, -50%);
+   	background-color: white;
+   	padding: 20px;
+   	box-shadow: 0px 0px 10000000px rgba(0, 0, 0, 0.8);
+   	border-radius: 10px;
+   	z-index: 1000;
+   	width: 50%;
+   	max-height: 70vh;
+
+   }
+
+   .batch-active-content {
+   	position: relative;
+   	text-align: center;
+
+   }
+
+   .close-btn {
+   	position: absolute;
+   	top: 10px;
+   	right: 20px;
+   	font-size: 25px;
+   	cursor: pointer;
+   	color: red;
+   }
