updated the code batch  transactions pop of the terms paid the student

--- a/src/CSS/batchpayments.css
+++ b/src/CSS/batchpayments.css
@@ -187,3 +187,28 @@ input[type="text"] {
         font-size: 12px;
     }
 }
+/*popup of the vieteh data of the term amout date*/
+.modal {
+    display: none;
+    position: fixed;
+    top: 20%;
+    left: 50%;
+    transform: translate(-50%, -20%);
+    width: 500px;
+    background-color: white;
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0 0 15px rgba(0, 0, 0, 0.5);
+    z-index: 1000;
+}
+.modal-content {
+    position: relative;
+}
+.close {
+    position: absolute;
+    top: 10px;
+    right: 20px;
+    cursor: pointer;
+    font-size: 20px;
+    color: red;
+}
